--- a/requirements.txt
+++ b/requirements.txt
@@ -1,58 +1,58 @@
-alembic==1.12.0
-aniso8601==9.0.1
-asttokens==2.2.1
-backcall==0.2.0
-blinker==1.6.2
-certifi==2023.7.22
-charset-normalizer==3.2.0
-click==8.1.7
-colorama==0.4.6
-cors==1.0.1
-DateTime==5.2
-decorator==5.1.1
-executing==1.2.0
-Faker==19.3.1
-filelock==3.12.4
-Flask==2.3.3
-Flask-Cors==4.0.0
-Flask-Migrate==4.0.5
-Flask-RESTful==0.3.10
-Flask-SQLAlchemy==3.0.5
-future==0.18.3
-gevent==23.9.1
-greenlet==3.0.0rc3
-gunicorn==21.2.0
-idna==3.4
-ipdb==0.13.13
-ipython==8.14.0
-itsdangerous==2.1.2
-jedi==0.19.0
-Jinja2==3.1.2
-Mako==1.2.4
-MarkupSafe==2.1.3
-matplotlib-inline==0.1.6
-packaging==23.1
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-prompt-toolkit==3.0.39
-ptyprocess==0.7.0
-pure-eval==0.2.2
-Pygments==2.16.1
-PySocks==1.7.1
-python-dateutil==2.8.2
-pytz==2023.3.post1
-requests==2.31.0
-requests-file==1.5.1
-six==1.16.0
-SQLAlchemy==2.0.20
-SQLAlchemy-serializer==1.4.1
-stack-data==0.6.2
-tldextract==3.6.0
-traitlets==5.9.0
-typing_extensions==4.7.1
-urllib3==2.0.5
-wcwidth==0.2.6
-Werkzeug==2.3.7
-zope.event==5.0
-zope.interface==6.0
+alembic
+aniso8601
+asttokens
+backcall
+blinker
+certifi
+charset-normalizer
+click
+colorama
+cors
+DateTime
+decorator
+executing
+Faker
+filelock
+Flask
+Flask-Cors
+Flask-Migrate
+Flask-RESTful
+Flask-SQLAlchemy
+future
+gevent
+greenlet
+gunicorn
+idna
+ipdb
+ipython
+itsdangerous
+jedi
+Jinja2
+Mako
+MarkupSafe
+matplotlib-inline
+packaging
+parso
+pexpect
+pickleshare
+prompt-toolkit
+ptyprocess
+pure-eval
+Pygments
+PySocks
+python-dateutil
+pytz
+requests
+requests-file
+six
+SQLAlchemy
+SQLAlchemy-serializer
+stack-data
+tldextract
+traitlets
+typing_extensions
+urllib3
+wcwidth
+Werkzeug
+zope.event
+zope.interface
