--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-alembic==1.12.0
-blinker==1.6.2
-click==8.1.7
-Flask==3.0.0
-Flask-Migrate==4.0.5
-Flask-SQLAlchemy==3.1.1
-greenlet==3.0.0
-gunicorn==21.2.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-Mako==1.2.4
-MarkupSafe==2.1.3
-packaging==23.2
-SQLAlchemy==2.0.21
-SQLAlchemy-serializer==1.4.1
-typing_extensions==4.8.0
+alembic
+blinker
+click
+Flask
+Flask-Migrate
+Flask-SQLAlchemy
+greenlet
+gunicorn
+itsdangerous
+Jinja2
+Mako
+MarkupSafe
+packaging
+SQLAlchemy
+SQLAlchemy-serializer
+typing_extensions
 Werkzeug
